# Hashiku

./: README.md
Hashiku/: Cargo.toml
Hashiku/src/: commands.rs  main.rs  output.rs  patterns.rs
Hashinator/: Cargo.toml  README.md  data.txt  hash.txt
Hashinator/src/: main.rs  output.rs  patterns.rs
hashiku/: Cargo.toml  hash-id.py
hashiku/src/: main.rs
