[package]
name = "hashinator"
version = "1.0.1"
edition = "2021"
description = "A tool to identify hashes blazingly fast"
repository = "https://github.com/North004/Hashinator"
license = "MIT"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
colored = "3.0.0"
once_cell = "1.20.2"
pcre2 = "0.2.9"
regex = "1.11.1"
